[workspace]
members = [
    "packages/*"
]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/protocol"
repository = "https://github.com/puniyu/protocol"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
thiserror = { version = "2.0.17" }

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true


